--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
     "element-plus": "^2.11.5",
@@ -21,6 +22,8 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "sass": "^1.93.2",
     "sass-loader": "^16.0.6",
+    "unplugin-auto-import": "^20.3.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.1.7"
   }
 }
